fix: fix visible personal blocks before css loaded;

--- a/src/styles/sections/personal.scss
+++ b/src/styles/sections/personal.scss
@@ -66,9 +66,6 @@ $paggination-padding: $paggination-padding-per-side * 2 + $paggination-height;
   }
 }
 
-.personal__slide {
-}
-
 .personal__image {
   width: 100%;
   height: 100%;
